// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportsContainer should match the snapshot 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <Card
      key="L8_2xcKg6"
      title="Golden"
    />
    <Card
      key="Oo_yirIicz"
      title="Xavier Basketball"
    />
  </div>
</section>
`;

exports[`SportsContainer should render error message if the error is not an empty string and allsports.length === 0 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
  </div>
</section>
`;

exports[`SportsContainer should render loading if the component is loading 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <Loading />
  </div>
</section>
`;
